modules/noosphere/taghmata/nixidy/manifests/prod/harbor/Ingress-harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    category: storage
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Registry
    glance/icon: di:harbor
    glance/id: harbor
    glance/name: Harbor
    glance/parent: harbor
    glance/url: https://harbor.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: harbor
  namespace: harbor
spec:
  ingressClassName: traefik
  rules:
    - host: harbor.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /api/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /service/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /v2/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /chartrepo/
            pathType: Prefix
          - backend:
              service:
                name: harbor-core
                port:
                  number: 80
            path: /c/
            pathType: Prefix
          - backend:
              service:
                name: harbor-portal
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - harbor.noosphere.uk
      secretName: harbor-tls
